--- a/style.css
+++ b/style.css
@@ -86,30 +86,18 @@
      /* ----- AIM ----- */
      
      
-    #objectives{
-        height:600px;
-        width:100%;
-        align-items: center;
-        width:100%;
-        object-fit:cover;
-    }
-    .aimed{
+     .obj{
         position: relative;
-        width: 100%;
-        padding:2%;
-        padding:2%;
-    
-    
-    
     }
-    .aimed .btn .text{
-        font-size: x-large;
+    
+    .obj .btn .text{
+        font-size: 3vh;
         letter-spacing: 1.5px;
         align-items: center;
         color: white;
         background-color:rgb(90, 90, 90); ;
     }
-    .aimed .btn{
+    .obj .btn{
         font-family: 'Anek Telugu', sans-serif;
     
         position: absolute;
@@ -125,18 +113,22 @@
         cursor: pointer;
         border-radius: 5px;
     }
-
-    .aimed .btn:hover {
+    
+    .obj .btn:hover {
         background-color: black;
         
     }
-    .aimed .btn:hover .text{
+    .obj .btn:hover .text{
         background-color: black;
         color: white;
         
     }
-   
-  
+    
+    .obj-img1{
+        width:100%;
+        height: auto;
+    }
+    
   /* ------MERCHANDISE------ */
   .buy{
       
